@@ -74,7 +74,11 @@ module Spec
           opts.on("-s", "--spec SPECIFICATION_NAME", "Execute context or specification with matching name") do |spec_name|
             options.spec_name = spec_name
           end
-
+          
+          opts.on("-o", "--out OUTPUT_FILE", "Path to output file (defaults to STDOUT)") do |outfile|
+            options.out = File.new(outfile, 'w')
+          end
+          
           opts.on("-l", "--line LINE_NUMBER", Integer, "Execute context or specification at given line") do |line_number|
             options.line_number = line_number.to_i
           end
