@@ -1,5 +1,7 @@
 require File.dirname(__FILE__) + '/../../../spec_helper.rb'
 
+require 'spec/expectations/differs/default'
+
 context "should ==" do
   specify "should pass when objects are ==" do
     lambda do
@@ -9,6 +11,7 @@ context "should ==" do
 
   specify "should raise exception with diff when objects are not ==" do
     # Please don't change this to non-diffed format - it will break the diffing support.
+    # Spec::Expectations::Should::Base.differ = Spec::Expectations::Differs::Default
     lambda do
       "apple".should == "cadillac"
     end.should_fail_with <<-EOD
@@ -18,5 +21,6 @@ Diff:
 -apple
 +cadillac
 EOD
+    # Spec::Expectations::Should::Base.differ = nil
   end
 end
